# PM-Assiatant

./: .env  Makefile  初步构思.md  操作.md
pm-copilot/: Makefile  pyproject.toml
pm-copilot/app/: .env  agent.py  config.py
pm-copilot/app/app/.adk/: session.db
pm-copilot/app/tools/: knowledge_manager.py  rag_tool.py  tavily_search.py
pm-copilot/data/: sessions.db
pm-copilot/docs/: 元宝.md
pm-copilot/frontend/: .env.development  .env.example  index.html  package-lock.json  package.json  vite.config.ts
pm-copilot/frontend/src/: App.tsx  ChatApp.tsx  global.css
pm-copilot/frontend/src/components/: ActivityTimeline.tsx  ChatMessagesView.tsx  InputForm.tsx  LandingPage.tsx  Reveal.tsx  SessionSidebar.tsx  WelcomeScreen.tsx
